force-app/main/default/objects/AV_LimitBook__c/AV_LimitBook__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AV_LimitBook</label>
</CustomObject>