force-app/main/default/objects/AV_LimitBook__c/fields/AV_Limit__c.field-meta.xml
<CustomField>
    <fullName>AV_Limit__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>AV_Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>