force-app/main/default/objects/AV_LimitBook__c/fields/AV_LimitGenerateData__c.field-meta.xml
<CustomField>
    <fullName>AV_LimitGenerateData__c</fullName>
    <description>establece límites en la generación de datos</description>
    <label>AV_LimitGenerateData</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>