force-app/main/default/objects/AV_LimitBook__c/fields/AV_LimitReassignment__c.field-meta.xml
<CustomField>
    <fullName>AV_LimitReassignment__c</fullName>
    <defaultValue>30000</defaultValue>
    <label>AV_LimitReassignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>